--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,9 @@
 }
 .client-list{
   overflow: scroll;
+  height: 100vh;
   background-color: white;
 }
 .content-book{
-  background-color: rgb(255, 255, 255);
+  background-color: white;
 }
