--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
-.wrapper{
+.wrapper {
   display: grid;
-  grid-template-columns: minmax(100px, auto) 1fr;
+  grid-template-columns: 250px 1fr;
 }
-.client-list{
-  overflow: scroll;
+.client-list {
+  overflow-y: scroll;
   height: 100vh;
   background-color: white;
 }
-.content-book{
+.content-book {
   background-color: white;
 }
