Add Client List (#1)
* Add Client List

* Fixed bugs and connection json

* Fixed bugs and optimized code

* Fixed bugs. Configure eslint and prettier

* fix bugs and configure prettier

Co-authored-by: Kostya Rybka <itenn08@gmail.com>

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
-.wrapper{
-  display: flex;
+.wrapper {
+  display: grid;
+  grid-template-columns: 250px 1fr;
 }
-.client-list{
-  flex-grow: 1;
-  background-color: yellow;
+.client-list {
+  overflow-y: scroll;
+  height: 100vh;
+  background-color: white;
 }
-.content{
-  flex-grow: 5;
-  background-color: black;
+.content-book {
+  background-color: white;
 }
