--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .wrapper {
   display: grid;
-  grid-template-columns: 250px 1fr;
+  grid-template-columns: 40% 1fr;
 }
 .client-list {
   overflow-y: scroll;
