--- a/src/components/ClientList/ClientList.module.css
+++ b/src/components/ClientList/ClientList.module.css
@@ -1,3 +1,15 @@
 .container {
   padding: 15px;
 }
+.wrapper {
+  display: grid;
+  grid-template-columns: 30% 1fr;
+}
+.list {
+  overflow-y: scroll;
+  height: 100vh;
+  background-color: white;
+}
+.content {
+  background-color: white;
+}
