--- a/src/components/ClientList/ListItem.module.css
+++ b/src/components/ClientList/ListItem.module.css
@@ -2,11 +2,35 @@
   display: flex;
   justify-content: left;
   align-items: center;
-  margin-bottom: 20px;
-  margin-top: 20px;
+  margin-bottom: 5px;
+  margin-top: 5px;
   line-height: normal;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.13);
+  padding: 10px 0 10px 0;
+  cursor: pointer;
+}
+.item:hover {
+  border-bottom: 1px solid #ff5e39;
+}
+.item:hover .name {
+  color: #ff5e39;
 }
 .short_name {
-  font-size: 40px;
+  display: flex;
+  background-color: #ff5e39;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
   text-transform: uppercase;
+  color: white;
+  height: 2rem;
+  width: 2rem;
+  border-radius: 35px;
+  padding: 17px;
+}
+.content {
+  margin-left: 15px;
+}
+.name {
+  color: black;
 }
