Feature/mobile view (#4)
* ignore eslint cache

* added routes

* add route and mobile template

* added combinereducer, buttons show/close sidebar, reducer sidebar

* fix bugs

Co-authored-by: Kostya Rybka <itenn08@gmail.com>

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,9 @@
   height: 100vh;
   background-color: white;
 }
+.mobile-wrapper {
+  height: 100vh;
+}
+.clientList_container {
+  padding: 15px;
+}
